fix build file